Challenge1/App/network.tf

#______________________________________VPC______________________________________
resource "aws_vpc" "my-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "3-tier web-app VPC"
  }
}

#_______________________Application Private Subnet______________________________
resource "aws_subnet" "app-subnet-1" {
  vpc_id                  = aws_vpc.my-vpc.id
  cidr_block              = "10.0.11.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = false

  tags = {
    Name = "Application-1a"
  }
}

resource "aws_subnet" "app-subnet-2" {
  vpc_id                  = aws_vpc.my-vpc.id
  cidr_block              = "10.0.12.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = false

  tags = {
    Name = "Application-2b"
  }
}
#___________App Security Group
module "app_sg" {
  source = ""
  name        = "${var.app_sg_name}"
  description = "${var.app_sg_description}"
  vpc_id      = "${data.aws_vpc.gi_vpc.id}"
  computed_ingress_with_cidr_blocks = [
    {
      from_port   = "${var.port_3333}"
      to_port     = "${var.port_3333}"
      protocol    = "tcp"
      description = "SIP"
      cidr_blocks = "${var.cidr_ranges_all}"
    }, 
    ]
 number_of_computed_ingress_with_cidr_blocks = 1
  computed_egress_with_cidr_blocks = [
    {
      from_port   = "${var.port_1111}"
      to_port     = "${var.port_1111}"
      protocol    = "tcp"
      description = "SIP secured"
      cidr_blocks = "${var.cidr_dev}"
    }, 
    ]
    number_of_computed_egress_with_cidr_blocks = 1
    tags {
    Name                   = "${var.web_alb_sg_name}"
  ....
      ....
  }
} 
  
  module "app_alb_sg" {
  source = "git::github_terraform_modules"
  name        = "${var.app_alb_sg_name}"
  description = "${var.app_alb_sg_description}"
  vpc_id      = "${data.aws_vpc.gi_vpc.id}"
  computed_ingress_with_cidr_blocks = [
    {
      from_port   = "${var.port_9999}"
      to_port     = "${var.port_9999}"
      protocol    = "tcp"
      description = " XXX Access"
      cidr_blocks = "${var.cidr_9999}"
    },
    ]
  number_of_computed_ingress_with_cidr_blocks = 1 
  tags {
    Name                   = "${var.app_alb_sg_name}"
  ....
      ....
  }
} 
#___________App server Security Group__________________
resource "aws_security_group" "appserver-sg" {
  name        = "Appserver-SG"
  description = "Allow inbound traffic from ALB"
  vpc_id      = aws_vpc.my-vpc.id

  ingress {
    description     = "Allow traffic from web layer"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.web-sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Appserver-SG"
  }
}
